--- a/index.html
+++ b/index.html
@@ -337,17 +337,54 @@
 
     <footer class="footer">
         <div class="container footer-cont">
-            <a class="link logo" href="./index.html">
-                Web<span class="logo-part-footer">Studio</span>
-            </a>
+            <div class="address-container">
+                <a class="link logo" href="./index.html">
+                    Web<span class="logo-part-footer">Studio</span>
+                </a>
+                
+                <address class="address">
+                    <ul class="list address-list">
+                        <li class="address-list-item"><a class="link location" href="https://goo.gl/maps/fPZRtLzm8wP5tE1H6">м. Київ, пр-т Лесі Українки, 26</a></li>
+                        <li class="address-list-item"><a class="link contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li class="address-list-item"><a class="link contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
             
-            <address class="address">
-                <ul class="list address-list">
-                    <li class="address-list-item"><a class="link location" href="https://goo.gl/maps/fPZRtLzm8wP5tE1H6">м. Київ, пр-т Лесі Українки, 26</a></li>
-                    <li class="address-list-item"><a class="link contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="address-list-item"><a class="link contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <div class="join-us-container">
+                <p class="join-us-text">Приєднуйтесь</p>
+                <ul class="social-list list">
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link join-us-link">
+                            <svg class="social-list-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link join-us-link">
+                            <svg class="social-list-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link join-us-link">
+                            <svg class="social-list-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link join-us-link">
+                            <svg class="social-list-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
-            </address>
+
+            </div>
         </div>
     </footer>
 
