--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <svg class="icon-envelope" width="16" height="12"> 
                             <use href="./images/icons.svg#icon-envelope"></use>
                         </svg>
-                    info@devstudio.com
+                        info@devstudio.com
                     </a>
                 </li>
                 <li class="contacts-item">
@@ -42,7 +42,7 @@
                         <svg class="icon-smartphone" width="10" height="16">
                             <use href="./images/icons.svg#icon-smartphone"></use>
                         </svg>
-                    +38 096 111 11 11
+                        +38 096 111 11 11
                     </a>
                 </li>
             </ul>
@@ -130,28 +130,28 @@
                         <ul class="social-list list">
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon" width="20" height="20">
+                                    <svg width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon" width="20" height="20">
+                                    <svg width="20" height="20">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon" width="20" height="20">
+                                    <svg width="20" height="20">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon" width="20" height="20">
+                                    <svg width="20" height="20">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -168,28 +168,28 @@
                         <ul class="social-list list">
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon" width="20" height="20">
+                                    <svg width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon" width="20" height="20">
+                                    <svg width="20" height="20">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon" width="20" height="20">
+                                    <svg width="20" height="20">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon" width="20" height="20">
+                                    <svg width="20" height="20">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -207,28 +207,28 @@
                         <ul class="social-list list">
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon" width="20" height="20">
+                                    <svg width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon" width="20" height="20">
+                                    <svg width="20" height="20">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon" width="20" height="20">
+                                    <svg width="20" height="20">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon" width="20" height="20">
+                                    <svg width="20" height="20">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -245,28 +245,28 @@
                         <ul class="social-list list">
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon" width="20" height="20">
+                                    <svg width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon" width="20" height="20">
+                                    <svg width="20" height="20">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon" width="20" height="20">
+                                    <svg width="20" height="20">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                    <svg class="social-list-icon" width="20" height="20">
+                                    <svg width="20" height="20">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -351,33 +351,33 @@
                 </address>
             </div>
             
-            <div class="join-us-container">
+            <div>
                 <p class="join-us-text">Приєднуйтесь</p>
                 <ul class="social-list list">
                     <li class="social-list-item">
                         <a href="" class="social-list-link join-us-link">
-                            <svg class="social-list-icon" width="20" height="20">
+                            <svg width="20" height="20">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-list-item">
                         <a href="" class="social-list-link join-us-link">
-                            <svg class="social-list-icon" width="20" height="20">
+                            <svg width="20" height="20">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-list-item">
                         <a href="" class="social-list-link join-us-link">
-                            <svg class="social-list-icon" width="20" height="20">
+                            <svg width="20" height="20">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-list-item">
                         <a href="" class="social-list-link join-us-link">
-                            <svg class="social-list-icon" width="20" height="20">
+                            <svg width="20" height="20">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
